Removed loopBloq and setupBloq from Bioblocks edition tab. Created new Bioblocks edition board. Still only the shelter, no functionality.

--- a/app/res/locales/en-GB.json
+++ b/app/res/locales/en-GB.json
@@ -1424,5 +1424,6 @@
     "zumjunior_7segment": "7 segment display",
     "zumjunior_button": "Double button",
 
-    "under_construction": "This tab is under construction"
+    "under_construction": "This tab is under construction",
+    "bioblocks_editor_field_title": "Bioblocks edition board"
 }
