--- a/app/res/locales/es-ES.json
+++ b/app/res/locales/es-ES.json
@@ -1798,5 +1798,6 @@
     "bloq-zumjunior-play-for": "durante",
     "bloq-zumjunior-play-ms": "ms",
 
-    "under_construction": "Esta pestaña está en construcción"
+    "under_construction": "Esta pestaña está en construcción",
+    "bioblocks_editor_field_title": "Tablero de edición de biobloques"
 }
